--- a/css/main.css
+++ b/css/main.css
@@ -378,3 +378,14 @@ h1 { margin-bottom: 20px; }
   margin-right: -20px;
   color: #999;
 }
+
+/*.display-results {
+	max-width: 900px;
+}*/
+.pager-container {
+  width: 30%;
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
+  margin-bottom: 15px;
+}
