--- a/css/main.css
+++ b/css/main.css
@@ -389,6 +389,10 @@ h1 { margin-bottom: 20px; }
 	border: solid 1px #CCC;
 	border-radius: 4px;
 }
+
+select.form-control {
+	background-color: #eee; /*rgba(179, 239, 178, 0.3); e8f2ff*/
+}
 #edit-template, #edit-style {
 	padding: 20px 0px 0px 0px;
     width: 100%;
