--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+.likes {
+  color: #FFF;
+  font-size: 50px;
+  top: 40px;
+  z-index: 100;
+  text-align: center;
+  position: absolute;
+  width: 160px;
+}
+
 .instagram-thumb {
 	height: 300px;
   	overflow-y: hidden;
